k8s/yolo5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5
  labels:
    app: yolo5
spec:
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
        labels:
          app: yolo5
    spec:
      containers:
      - name: yolo5
        image: 933060838752.dkr.ecr.us-east-2.amazonaws.com/saraa-yolo5:11
        resources:
          requests:
            cpu: 70m
            memory: 70Mi
          limits:
            cpu: 70m
            memory: 70Mi
