k8s/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  labels:
    app: polybot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot
        image: 933060838752.dkr.ecr.us-east-2.amazonaws.com/saraa-polybot:17
        resources:
          requests:
            cpu: 70m
            memory: 70Mi
          limits:
            cpu: 70m
            memory: 70Mi
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 8443
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 8443

---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
