k8s/saraaPolybot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saraa-polybot-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - saraa.atech-bot.click
      secretName: saraa-tls
  rules:
  - host: saraa.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot
            port:
              number: 8443
  ingressClassName: nginx
